处理警告并将Hazel转化为静态库

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1473,171
-ViewportId=0x59819E39
-Size=429,680
+Pos=894,19
+Size=386,417
 Collapsed=0
 
 [Window][Example: Console]
@@ -15,10 +14,22 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Log]
-ViewportPos=681,159
-ViewportId=0x6F524002
-Size=500,400
+Pos=0,438
+Size=1280,282
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Test]
+Pos=339,132
+Size=426,224
 Collapsed=0
 
 [Docking][Data]
+DockSpace   ID=0xC0DFADC4 Pos=222,166 Size=1280,701 Split=Y Selected=0x5E5F7166
+  DockNode  ID=0x00000003 Parent=0xC0DFADC4 SizeRef=1280,417 CentralNode=1
+  DockNode  ID=0x00000004 Parent=0xC0DFADC4 SizeRef=1280,282 Selected=0x38CCB771
 
